Fix PSD loading of groups layers that have only one layer

BUG:357559
Fixes T1313